--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   intl: any
   flutter_vector_icons: ^2.0.0
+  go_router: ^16.0.0
 
 dev_dependencies:
   flutter_test:
